--- a/style.css
+++ b/style.css
@@ -22,10 +22,10 @@ body {
     display: flex;
     height: 100vh;
     align-items: center;
+    justify-content: center;
 }
 
 .text-content {
-    flex: 2;
     align-content: center;
 }
 
@@ -55,7 +55,7 @@ body {
 }
 
 .image-wrapper {
-    flex: 1;
+    width: 500px;
 }
 
 .image-wrapper img {
