--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -25,10 +25,6 @@ body {
     justify-content: center;
 }
 
-.text-content {
-    align-content: center;
-}
-
 .text-content h2 {
     font-size: 1.5rem;
     font-weight: bold;
@@ -48,10 +44,10 @@ body {
 
 .text-content a {
     text-decoration: none;
-    color: white;
+    color: rgb(255, 255, 255);
     background-color: rgb(85, 118, 147);
     padding: 10px 30px;
-    border-radius: 5px;
+    border-radius:50px;
 }
 
 .image-wrapper {
