--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
     color: rgb(255, 255, 255);
     background-color: rgb(85, 118, 147);
     padding: 10px 30px;
-    border-radius:50px;
+    border-radius: 50px;
 }
 
 .image-wrapper {
@@ -55,5 +55,49 @@ body {
 
 .image-wrapper img {
     width: 100%;
+    height: auto;
+}
+
+.about-me-container {
+    display: flex;
+    background-color: white;
+    justify-content: center;
+    padding: 100px 0;
+    gap: 50px;
+}
+
+.about-me-wrapper {
+    max-width: 500px;
+}
+
+.about-me-wrapper h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: rgb(85, 118, 147);
+}
+
+.about-me-wrapper h1 {
+    font-size: 2rem;
+    font-weight: bold;
+    color: black;
+}
+
+.skills-container {
+    padding: 10px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+}
+
+.icon-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    max-width: 1200px;
+}
+
+.icon-container img {
+    max-width: 200px;
     height: auto;
 }
